# www25_intent_recognition

./: .gitignore
LLaMA-Factory/data/: dataset_info.json
LLaMA-Factory/data/mire/: train.json
LLaMA-Factory/data/mire/train/: train.json
LLaMA-Factory/examples/: predict.yaml  qwen2_vl_full_sft.yaml  train.yaml  train_debug.yaml
LLaMA-Factory/src/llamafactory/train/: callbacks.py
MIRE/: .gitignore  README.md  README_zh.md  pyproject.toml
MIRE/data/: demo_test.json
MIRE/mire_baseline/: cal_acc.py  convert2submit.py
MIRE/mire_baseline/configs/: data_info.json  predict.yaml  qwen2_vl_full_sft.yaml
